frontend/manifests/application/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-web
  labels:
    app: simple-bank-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-web
  template:
    metadata:
      name: simple-bank-web
      labels:
        app: simple-bank-web
    spec:
      containers:
        - name: simple-bank-web
          image: example
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: http3
              containerPort: 4430
              protocol: TCP
            - name: quic
              containerPort: 4431
              protocol: UDP
      restartPolicy: Always
