frontend/manifests/application/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-simple-bank-service
spec:
  selector:
    app: simple-bank-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
      # nodePort: 30003
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
      # nodePort: 30004
    - name: quic
      port: 8443
      targetPort: 8443
      protocol: UDP
      # nodePort: 30005
  type: ClusterIP
