frontend/manifests/application/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-web-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: higress
  rules:
    - host: "web.api-r.com"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-simple-bank-service
                port:
                  number: 443
  tls:
    - hosts:
        - web.api-r.com
      secretName: simple-bank-web-sect
